back-manifests/back-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: backend
          image: davidaris/app-back:d03efd3d89446f991822a1ce3d58faf2a20cd817
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
