back-manifests/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deploy
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mongo
  template:
    metadata:
      labels:
        db: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:4.0.8
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: db-volume
              mountPath: /data/db
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-pvc
