back-manifests/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
  namespace: ingress-nginx
spec:
  type: ClusterIP
  selector:
    app: back   
  ports:
    - port: 3001
      targetPort: 3001
