back-manifests/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: ingress-nginx
spec:
  selector:
    db: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
